2005-05-24 Mikhail Khodjaiants
	Bug 88558: run-to-line not thread oriented.
	The "Run to Line" action should be enabled on stack frames and threads, not on targets.
	* RunToLineAdapter.java

2005-05-20 Mikhail Khodjaiants
	Bug 94139: User-defined register groups.
	UI to add/remove user-defined groups.
	* ICDebugHelpContextIds.java
	* ActionMessages.properties
	+ AddRegisterGroupActionDelegate.java
	+ RegisterGroupDialog.java
	+ RemoveRegisterGroupActionDelegate.java
	* plugin.properties
	* plugin.xml

2005-05-09 Mikhail Khodjaiants
	Bug 80175: Replace the CDT source lookup by the source lookup provided by Eclipse platform.
	Removed unused images.
	- icons/dtool16/adddirsource_wiz.gif
	- icons/dtool16/addprjsource_wiz.gif
	- icons/etool16/adddirsource_wiz.gif
	- icons/etool16/addprjsource_wiz.gif
	- icons/wizban/add_dir_source_location_wiz.gif
	- icons/wizban/add_prj_source_location_wiz.gif
	- icons/wizban/add_source_location_wiz.gif
	* CDebugImages.java

2005-05-09 Mikhail Khodjaiants
	Bug 80175: Replace the CDT source lookup by the source lookup provided by Eclipse platform.
	Removed CDebugEditor and old source lookup related classes and interfaces.
	* CDebugModelPresentation.java
	- CDebugEditor.java
	- EditorInputDelegate.java
	- EditorMessages.java
	- EditorMessages.properties
	- FileNotFoundElement.java
	- NoSymbolOrSourceElement.java
	- AddDirectorySourceLocationBlock.java
	- AddDirectorySourceLocationWizard.java
	- AddProjectSourceLocationBlock.java
	- AddProjectSourceLocationWizard.java
	- AddSourceLocationWizard.java
	- SourceLocationSelectionPage.java
	- SourceLocationWizardNode.java
	- WizardMessages.java
	- WizardMessages.properties
	- INewSourceLocationWizard.java
	* OldDefaultSourceLocator.java
	- SourceListDialogField.java
	- SourceLookupBlock.java
	- SourceLookupLabelProvider.java
	* SourceLookupMessages.properties
	- SourcePropertyPage.java
	* plugin.properties
	* plugin.xml

2005-04-27 Mikhail Khodjaiants